paused mode color placeholder

--- a/supporting-files/pistar-css-dist.ini
+++ b/supporting-files/pistar-css-dist.ini
@@ -11,7 +11,7 @@ ServiceCellInactiveColor=#BB5555
 ModeCellDisabledColor=#606060
 ModeCellActiveColor=#00BB00
 ModeCellInactiveColor=#BB0000
-ModeCellPausedColor=#f93
+ModeCellPausedColor=#ff9933
 NavPanelColor=#242d31
 
 [Text]
