Configurable Last Heard rows

--- a/supporting-files/pistar-css-W0CHP.ini
+++ b/supporting-files/pistar-css-W0CHP.ini
@@ -31,6 +31,9 @@ ModeCellInactiveColor=#550000
 BgEvenColor=#b7d4d2
 BgOddColor=#7ca4a4
 
+[DashboardRows]
+LastHeard=40
+
 [Content]
 TextColor=#ffffff
 
