--- a/supporting-files/pistar-css-dist.ini
+++ b/supporting-files/pistar-css-dist.ini
@@ -31,6 +31,9 @@ ModeCellInactiveColor=#550000
 BgEvenColor=#f7f7f7
 BgOddColor=#d0d0d0
 
+[DashboardRows]
+LastHeard=40
+
 [Content]
 TextColor=#000000
 
