--- a/supporting-files/pistar-css-W0CHP.ini
+++ b/supporting-files/pistar-css-W0CHP.ini
@@ -1,18 +1,18 @@
 [Background]
-PageColor=#093231
-ContentColor=#1a7d74
-BannersColor=#1c5456
-NavbarColor=#247c7a
-NavbarHoverColor=#55ada9
+PageColor=#1a1e23
+ContentColor=#4f5b66
+BannersColor=#2e363f
+NavbarColor=#343d46
+NavbarHoverColor=#65737e
 DropdownColor=#f9f9f9
-DropdownHoverColor=#d0d0d0
-ServiceCellActiveColor=#11DD11
+DropdownHoverColor=#a7adba
+ServiceCellActiveColor=#1fa11f
 ServiceCellInactiveColor=#BB5555
 ModeCellDisabledColor=#535353
-ModeCellActiveColor=#00BB00
-ModeCellInactiveColor=#BB0000
+ModeCellActiveColor=#1fa11f
+ModeCellInactiveColor=#BB5555
 ModeCellPausedColor=#ff9933
-NavPanelColor=#1a7d74
+NavPanelColor=#4f5b66
 
 [Text]
 TableHeaderColor=#ffffff
@@ -21,18 +21,15 @@ NavbarColor=#ffffff
 NavbarHoverColor=#ffffff
 DropdownColor=#000000
 DropdownHoverColor=#000000
-ServiceCellActiveColor=#000000
-ServiceCellInactiveColor=#000000
-ModeCellDisabledColor=#b0b0b0
-ModeCellActiveColor=#003300
-ModeCellInactiveColor=#550000
+ServiceCellActiveColor=#ffffff
+ServiceCellInactiveColor=#bebebe
+ModeCellDisabledColor=#b3b3af
+ModeCellActiveColor=#ffffff
+ModeCellInactiveColor=#bebebe
 
 [Tables]
-BgEvenColor=#b7d4d2
-BgOddColor=#7ca4a4
-
-[DashboardRows]
-LastHeard=40
+BgEvenColor=#a8b2b2
+BgOddColor=#99a5a6
 
 [Content]
 TextColor=#ffffff
@@ -45,3 +42,5 @@ Text=Some Text
 Enabled=0
 Text=Some long text entry
 
+[DashboardRows]
+LastHeard=40
