font size add'n

--- a/supporting-files/pistar-css-W0CHP.ini
+++ b/supporting-files/pistar-css-W0CHP.ini
@@ -26,6 +26,7 @@ ServiceCellInactiveColor=#bebebe
 ModeCellDisabledColor=#b3b3af
 ModeCellActiveColor=#ffffff
 ModeCellInactiveColor=#bebebe
+FontSize=14pt
 
 [Tables]
 BgEvenColor=#a8b2b2
