--- a/supporting-files/pistar-css-dist.ini
+++ b/supporting-files/pistar-css-dist.ini
@@ -26,6 +26,7 @@ ServiceCellInactiveColor=#000000
 ModeCellDisabledColor=#b0b0b0
 ModeCellActiveColor=#003300
 ModeCellInactiveColor=#550000
+FontSize=14pt
 
 [Tables]
 BgEvenColor=#f7f7f7
