New CSS funcs and layout

--- a/supporting-files/pistar-css-W0CHP.ini
+++ b/supporting-files/pistar-css-W0CHP.ini
@@ -13,8 +13,11 @@ ModeCellActiveColor=#1fa11f
 ModeCellInactiveColor=#BB5555
 ModeCellPausedColor=#ff9933
 NavPanelColor=#4f5b66
+TableRowBgEvenColor=#a8b2b2
+TableRowBgOddColor=#99a5a6
 
 [Text]
+TextColor=#ffffff
 TableHeaderColor=#ffffff
 BannersColor=#ffffff
 NavbarColor=#ffffff
@@ -26,14 +29,6 @@ ServiceCellInactiveColor=#bebebe
 ModeCellDisabledColor=#b3b3af
 ModeCellActiveColor=#ffffff
 ModeCellInactiveColor=#bebebe
-FontSize=14pt
-
-[Tables]
-BgEvenColor=#a8b2b2
-BgOddColor=#99a5a6
-
-[Content]
-TextColor=#ffffff
 
 [BannerH2]
 Enabled=0
@@ -43,5 +38,7 @@ Text=Some Text
 Enabled=0
 Text=Some long text entry
 
-[DashboardRows]
-LastHeard=40
+[ExtraSettings]
+LastHeardRows=40
+FontSize=18
+
