--- a/supporting-files/pistar-css-dist.ini
+++ b/supporting-files/pistar-css-dist.ini
@@ -13,8 +13,11 @@ ModeCellActiveColor=#00BB00
 ModeCellInactiveColor=#BB0000
 ModeCellPausedColor=#ff9933
 NavPanelColor=#242d31
+TableRowBgEvenColor=#f7f7f7
+TableRowBgOddColor=#d0d0d0
 
 [Text]
+TextColor=#000000
 TableHeaderColor=#ffffff
 BannersColor=#ffffff
 NavbarColor=#ffffff
@@ -26,17 +29,6 @@ ServiceCellInactiveColor=#000000
 ModeCellDisabledColor=#b0b0b0
 ModeCellActiveColor=#003300
 ModeCellInactiveColor=#550000
-FontSize=14pt
-
-[Tables]
-BgEvenColor=#f7f7f7
-BgOddColor=#d0d0d0
-
-[DashboardRows]
-LastHeard=40
-
-[Content]
-TextColor=#000000
 
 [BannerH2]
 Enabled=0
@@ -45,4 +37,8 @@ Text=Some Text
 [BannerExtText]
 Enabled=0
 Text=Some long text entry
+
+[ExtraSettings]
+LastHeard=40
+FontSize=18
 
