css templ. upd.

--- a/supporting-files/pistar-css-W0CHP.ini
+++ b/supporting-files/pistar-css-W0CHP.ini
@@ -13,11 +13,12 @@ ModeCellActiveColor=#1fa11f
 ModeCellInactiveColor=#BB5555
 ModeCellPausedColor=#ff9933
 NavPanelColor=#4f5b66
-TableRowBgEvenColor=#a8b2b2
-TableRowBgOddColor=#99a5a6
+TableRowBgEvenColor=#86898d
+TableRowBgOddColor=#656b71
 
 [Text]
 TextColor=#ffffff
+TextLinkColor=#0000e0
 TableHeaderColor=#ffffff
 BannersColor=#ffffff
 NavbarColor=#ffffff
