--- a/supporting-files/pistar-css-dist.ini
+++ b/supporting-files/pistar-css-dist.ini
@@ -18,6 +18,7 @@ TableRowBgOddColor=#d0d0d0
 
 [Text]
 TextColor=#000000
+TextLinkColor=#0000e0
 TableHeaderColor=#ffffff
 BannersColor=#ffffff
 NavbarColor=#ffffff
@@ -31,6 +32,6 @@ ModeCellActiveColor=#003300
 ModeCellInactiveColor=#550000
 
 [ExtraSettings]
-LastHeard=40
+LastHeardRows=40
 FontSize=18
 
