* Minor: New CSS configurator so users can select Header Size and Table Brder Color

--- a/supporting-files/pistar-css-W0CHP.ini
+++ b/supporting-files/pistar-css-W0CHP.ini
@@ -32,6 +32,7 @@ ModeCellActiveColor=#ffffff
 ModeCellInactiveColor=#bebebe
 
 [ExtraSettings]
+TableBorderColor=#777777
 LastHeardRows=40
-FontSize=18
-
+MainFontSize=18
+HeaderFontSize=34
