--- a/supporting-files/pistar-css-dist.ini
+++ b/supporting-files/pistar-css-dist.ini
@@ -32,6 +32,7 @@ ModeCellActiveColor=#003300
 ModeCellInactiveColor=#550000
 
 [ExtraSettings]
+TableBorderColor=#777777
 LastHeardRows=40
-FontSize=18
-
+MainFontSize=18
+HeaderFontSize=34
