* Minor: Updated custom CSS

--- a/supporting-files/pistar-css-W0CHP.ini
+++ b/supporting-files/pistar-css-W0CHP.ini
@@ -1,30 +1,30 @@
 [Background]
-PageColor=#1a1e23
-ContentColor=#4f5b66
+PageColor=#212529
+ContentColor=#212529
 BannersColor=#2e363f
-NavbarColor=#343d46
+NavbarColor=#2e363f
 NavbarHoverColor=#65737e
-DropdownColor=#f9f9f9
-DropdownHoverColor=#a7adba
+DropdownColor=#6b6c73
+DropdownHoverColor=#3c3f47
 ServiceCellActiveColor=#1fa11f
 ServiceCellInactiveColor=#BB5555
 ModeCellDisabledColor=#535353
 ModeCellActiveColor=#1fa11f
 ModeCellInactiveColor=#BB5555
 ModeCellPausedColor=#ff9933
-NavPanelColor=#4f5b66
-TableRowBgEvenColor=#86898d
-TableRowBgOddColor=#656b71
+NavPanelColor=#212529
+TableRowBgEvenColor=#949494
+TableRowBgOddColor=#7a7c80
 
 [Text]
-TextColor=#ffffff
-TextLinkColor=#0000e0
-TableHeaderColor=#ffffff
-BannersColor=#ffffff
-NavbarColor=#ffffff
+TextColor=#bebebe
+TextLinkColor=#1a2573
+TableHeaderColor=#bebebe
+BannersColor=#bebebe
+NavbarColor=#bebebe
 NavbarHoverColor=#ffffff
-DropdownColor=#000000
-DropdownHoverColor=#000000
+DropdownColor=#ffffff
+DropdownHoverColor=#ffffff
 ServiceCellActiveColor=#ffffff
 ServiceCellInactiveColor=#bebebe
 ModeCellDisabledColor=#b3b3af
@@ -32,8 +32,9 @@ ModeCellActiveColor=#ffffff
 ModeCellInactiveColor=#bebebe
 
 [ExtraSettings]
-TableBorderColor=#777777
-LastHeardRows=40
+TableBorderColor=#3c3f47
+LastHeardRows=100
 MainFontSize=18
-BodyFontSize=17
 HeaderFontSize=34
+BodyFontSize=17
+
