* Minor: cleanup css

--- a/supporting-files/pistar-css-dist.ini
+++ b/supporting-files/pistar-css-dist.ini
@@ -12,7 +12,7 @@ ModeCellDisabledColor=#606060
 ModeCellActiveColor=#00BB00
 ModeCellInactiveColor=#BB0000
 ModeCellPausedColor=#ff9933
-NavPanelColor=#242d31
+NavPanelColor=#edf0f5
 TableRowBgEvenColor=#f7f7f7
 TableRowBgOddColor=#d0d0d0
 
@@ -32,8 +32,9 @@ ModeCellActiveColor=#003300
 ModeCellInactiveColor=#550000
 
 [ExtraSettings]
-TableBorderColor=#777777
 LastHeardRows=40
 MainFontSize=18
 BodyFontSize=17
 HeaderFontSize=34
+TableBorderColor=#000000
+
