New CSS values added

--- a/supporting-files/pistar-css-W0CHP.ini
+++ b/supporting-files/pistar-css-W0CHP.ini
@@ -17,7 +17,8 @@ TableRowBgEvenColor=#949494
 TableRowBgOddColor=#7a7c80
 
 [Text]
-TextColor=#bebebe
+TextColor=#000000
+TextSectionColor=#bebebe
 TextLinkColor=#1a2573
 TableHeaderColor=#bebebe
 BannersColor=#bebebe
@@ -33,8 +34,8 @@ ModeCellInactiveColor=#bebebe
 
 [ExtraSettings]
 TableBorderColor=#3c3f47
-LastHeardRows=40
-MainFontSize=18
-HeaderFontSize=34
+LastHeardRows=100
+MainFontSize=20
+HeaderFontSize=28
 BodyFontSize=17
 
