--- a/supporting-files/pistar-css-dist.ini
+++ b/supporting-files/pistar-css-dist.ini
@@ -18,6 +18,7 @@ TableRowBgOddColor=#d0d0d0
 
 [Text]
 TextColor=#000000
+TextSectionColor=#000000
 TextLinkColor=#0000e0
 TableHeaderColor=#ffffff
 BannersColor=#ffffff
