fix ber/loss colors

--- a/supporting-files/pistar-css-W0CHP.ini
+++ b/supporting-files/pistar-css-W0CHP.ini
@@ -6,12 +6,12 @@ NavbarColor=#2e363f
 NavbarHoverColor=#65737e
 DropdownColor=#6b6c73
 DropdownHoverColor=#3c3f47
-ServiceCellActiveColor=#0e790e
-ServiceCellInactiveColor=#9b3d3d
+ServiceCellActiveColor=#2c7f2c
+ServiceCellInactiveColor=#b23b3b
 ModeCellDisabledColor=#535353
-ModeCellActiveColor=#0e790e
-ModeCellInactiveColor=#9b3d3d
-ModeCellPausedColor=#a75808
+ModeCellActiveColor=#2c7f2c
+ModeCellInactiveColor=#b23b3b
+ModeCellPausedColor=#a65d14
 NavPanelColor=#212529
 TableRowBgEvenColor=#949494
 TableRowBgOddColor=#7a7c80
